--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,119 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.background {
+	height: 100vh;
+	background-size: cover;
+}
 
+.container {
+	height: 100%;
+}
+
+.contents {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+	height: 100%;
 }
 
 .slider {
-    position: relative;
-    /* margin: auto; */
-    height: 60%;
-    width: 60%;
-    /* max-width: 600px;
-    max-height: 400px; */
-    background-color: salmon;
+	height: 80%;
+	width: 60%;
+	max-width: 600px;
+	max-height: 500px;
 }
 
-.controls {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 10;
+.slider .slider-viewer {
+	position: relative;
+	height: 80%;
 }
 
-.buttons {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    width: 500px;
-    border: 3px solid white;
-    position: absolute;
-    bottom: 2rem;
+.slider .controls {
+	position: absolute;
+	inset: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
+	z-index: 10;
 }
 
-.start, .invert {
-    width: 25%;
-    background-color: red;
-    color: white;
-    font-weight: bold;
-    border-radius: 10px;
-    padding: 1rem;}
-
-.btn-up, .btn-down {
-    margin: .5rem;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 100%;
-    background-color: white;
+.btn-left, .btn-right {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: .5rem;
+	width: 2rem;
+	height: 2rem;
+	border-radius: 100%;
+	background-color: white;
 }
 
-
-.slider-img {
-    display: none;
-    position: absolute;
-    inset: 0;
-    background-position: center;
-    background-size: cover;
+.btn-left:hover, .btn-right:hover {
+	background-color: lightblue;
+	cursor: pointer;
 }
 
-
-.active {
-    display: block;
+.hidden {
+	visibility: hidden;
 }
 
-.thumbnail {
-    position: relative;
-    height: 60%;
-    width: 15%;
-    background-color: blue;
+.slider .slide {
+	position: absolute;
+	inset: 0;
+	display: none;
+	width: 100%;
+	height: 100%;
+	color: white;
 }
 
-.thumbnail-img {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    object-fit: cover;
-    object-position: center;
+.slider .slide img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
 
-.thumbnail-img-container {
-    position: relative;
-    width: 100%;
-    height: 20%;
+.slider .slide .text {
+	position: absolute;
+	inset: 0;
+	padding: 18rem 1rem;
+	text-align: right;
 }
 
+.slider .slide.active {
+	display: block;
+}
 
-.dark {
+.slider .thumbs {
+	position: relative;
+	display: flex;
+	height: 20%;
+}
+
+.slider .thumb-img {
+	flex: 1 0 0;
+	min-width: 0;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
 	filter: brightness(.4);
 }
 
-.light {
-	border: 3px solid gray;
+.slider .thumb-img.active {
+	border: 4px solid gray;
 	filter: brightness(1);
 }
 
-.block {
-    padding-top: 30rem;
-    margin-right: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+.buttons button{
+    padding: 1em;
+    background-color: red;
     color: white;
-}
-
-p {
-    max-width: 650px;
-    text-align: end
+    border-radius: 7px;
 }
